--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "test for MERN",
   "main": "server.js",
   "scripts": {
+    "lint": "eslint  --fix",
     "start": "node server",
     "dev": "nodemon server",
     "heroku-postbuild": "npm install"
@@ -17,10 +18,15 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "eslint-plugin-promise": "^4.2.1",
     "express": "^4.17.1",
     "mongoose": "^5.9.19"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "eslint": "^7.4.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "nodemon": "^2.0.4",
+    "prettier": "^2.0.5"
   }
 }
