--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "eslint  --fix",
     "start": "node server",
     "dev": "nodemon server",
+    "test": "jest --watch",
     "heroku-postbuild": "npm install"
   },
   "author": "Sadaf Siddiqui",
@@ -16,6 +17,7 @@
     "url": "ghitser"
   },
   "dependencies": {
+    "@shelf/jest-mongodb": "^1.2.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "eslint-plugin-promise": "^4.2.1",
@@ -26,6 +28,7 @@
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.1.0",
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5"
   }
